C_stretch-ceiling-manufacturers.html fix

--- a/wp-content/themes/twentytwenty-child/css/module/ceiling/stretch-ceiling-manufacturers.scss
+++ b/wp-content/themes/twentytwenty-child/css/module/ceiling/stretch-ceiling-manufacturers.scss
@@ -13,37 +13,40 @@
     &__title {
         line-height: 1.2em;
         letter-spacing: 0.03em;
-        margin-bottom: 1em;
+        margin-bottom: 2.5rem;
         @include _768 {
-            margin-bottom: 0.3em;
+            margin-bottom: 2rem;
+            line-height: 1.1;
         }
         @include _1200 {
-            margin-bottom: 0.2em;
+            line-height: 1.25;
+            margin-bottom: 3rem;
         }
     }
 
     /* .stretch-ceiling-manufacturers__text */
 
     &__text {
-        margin-bottom: 0.95em;
+        margin-bottom: 2.5rem;
         line-height: 1.2em;
         letter-spacing: 0.03em;
 
         @include _768 {
-            margin-bottom: 1.75em;
+            margin-bottom: 3rem;
         }
     }
 
     /* .stretch-ceiling-manufacturers__box-img */
 
     &__box-img {
+        width: 100%;
         height: 9.1rem;
         
         @include _768 {
             height: 18rem;
         }
         @include _1200 {
-            height: 29.1rem;
+            height: 24.5rem;
         }
     }
 
@@ -52,5 +55,6 @@
     &__img {
         width: 100%;
         height: 100%;
+        object-fit: contain;
     }
 }
